objects/vlocity_cmt__GraphClone__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__BlackListedFields__c</fullName>
        <description>For blacklist object this is for specific field(s), comma separated, that should have their values blanked out. For whitelist object, this is the field that is the FK to the root object. It is typically a polymorphic Id so it is not picked up in the usual FK logic that GraphClone.cls uses. This must be the field API name including namespace.</description>
        <label>Fields To Skip Or Force</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BlackListed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked this object type will not be cloned.</description>
        <inlineHelpText>Use this to prevent unnecessary duplicates.</inlineHelpText>
        <label>Black Listed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ChildObject__c</fullName>
        <description>Child object(s) being cloned. Use API name.</description>
        <externalId>true</externalId>
        <label>Child Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RootObject__c</fullName>
        <description>The parent object type that is being cloned. Use API name.</description>
        <externalId>true</externalId>
        <label>Root Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SObjectType__c</fullName>
        <description>Deprecated field because of unique index</description>
        <label>SObjectType</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Graph Clone</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>cp-{0000}</displayFormat>
        <label>Graph Clone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Graph Clones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>